ros2_ws/log/build_2022-12-27_15-31-47/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/root/kadai2/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/talker.py", line 11
    grobal n
           ^
SyntaxError: invalid syntax

